@@ -1,6 +1,6 @@
 ###############################################################################
 # Chirpy! v0.2, a quote management system                                     #
-# Copyright (C) 2005 Tim De Pauw <ceetee@users.sourceforge.net>               #
+# Copyright (C) 2005-2006 Tim De Pauw <ceetee@users.sourceforge.net>          #
 ###############################################################################
 # This program is free software; you can redistribute it and/or modify it     #
 # under the terms of the GNU General Public License as published by the Free  #
